# synchronicity

./: Cargo.toml  README.md
.github/workflows/: rust.yml  security_audit.yml
src/: application.rs  commands.rs  config.rs  error.rs  executor.rs  lib.rs  verifier.rs
src/commands/: init.rs  start.rs  version.rs
synchro/: Cargo.toml  README.md
synchro/src/: config.rs  crypto.rs  error.rs  launcher.rs  lib.rs  node.rs  transaction.rs
synchro/src/config/: builder.rs  key_seed.rs  peer_info.rs
tests/: acceptance.rs
