[package]
name = "synchronicity"
description = """
Distributed build system providing cryptographic proofs-of-reproducibility
via BFT consensus.
"""
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
version    = "0.0.1"
repository = "https://github.com/iqlusioninc/synchronicity"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils", "rust-patterns"]
keywords   = ["bft", "libra", "reproducible-builds"]

[workspace]
members = [".", "synchro"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
abscissa_core = "0.4.0"
failure = "0.1"
gumdrop = "0.7"
lazy_static = "1"
serde = { version = "1", features = ["serde_derive"] }
synchro = { version = "0.1", path = "synchro" }

[dev-dependencies]
tempfile = "3"

[dev-dependencies.abscissa_core]
version = "0.4.0"
features = ["testing"]
