[package]
name    = "synchronicity"
version = "0.0.1"
description = """
Distributed build system providing cryptographic proofs-of-reproducibility
via BFT consensus.
"""
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
repository = "https://github.com/iqlusioninc/synchronicity"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils", "rust-patterns"]
keywords   = ["bft", "libra", "reproducible-builds"]

[workspace]
members = [".", "synchro"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
abscissa_core = "0.5"
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
synchro = { version = "0.1", path = "synchro" }
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[dev-dependencies.abscissa_core]
version = "0.5"
features = ["testing"]
