[package]
name = "synchro"
description = """
Byzantine Fault Tolerant consensus library built on HotStuff BFT
used by the Synchronicity reproducible build system
"""
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
version    = "0.1.0"
homepage   = "https://github.com/iqlusioninc/synchronicity"
repository = "https://github.com/iqlusioninc/synchronicity/tree/develop/synchro"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
categories = ["algorithms", "api-bindings", "asynchronous", "network-programming"]
keywords   = ["bft", "consensus", "hotstuff", "libra"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
consensus = { git = "https://github.com/iqlusioninc/libra.git", branch = "synchro" }
executor = { git = "https://github.com/iqlusioninc/libra.git", branch = "synchro" }
libra-config = { git = "https://github.com/iqlusioninc/libra.git", branch = "synchro" }
parity-multiaddr = { version = "0.5", default-features = false }

[dependencies.crypto]
package = "libra-crypto"
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.types]
package = "libra-types"
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"
