[package]
name = "synchro"
description = """
Byzantine Fault Tolerant consensus library built on HotStuff BFT
used by the Synchronicity reproducible build system
"""
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
version    = "0.1.0"
homepage   = "https://github.com/iqlusioninc/synchronicity"
repository = "https://github.com/iqlusioninc/synchronicity/tree/develop/synchro"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
categories = ["algorithms", "api-bindings", "asynchronous", "network-programming"]
keywords   = ["bft", "consensus", "hotstuff", "libra"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
hkd32 = { version = "0.3", features = ["mnemonic"] }
parity-multiaddr = { version = "0.5", default-features = false }
serde = { version = "1", features = ["serde_derive"] }

#
# Libra Core Dependencies
#

[dependencies.consensus]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.crypto]
package = "libra-crypto"
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.executor]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.libra-config]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.types]
package = "libra-types"
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"
