[package]
name = "synchro"
description = """
Byzantine Fault Tolerant consensus library built on HotStuff BFT
used by the Synchronicity reproducible build system
"""
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
version    = "0.1.0"
homepage   = "https://github.com/iqlusioninc/synchronicity"
repository = "https://github.com/iqlusioninc/synchronicity/tree/develop/synchro"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
categories = ["algorithms", "api-bindings", "asynchronous", "network-programming"]
keywords   = ["bft", "consensus", "hotstuff", "libra"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
hkd32 = { version = "0.3", features = ["mnemonic"] }
log = "0.4"
parity-multiaddr = { version = "0.5", default-features = false }
serde = { version = "1", features = ["serde_derive"] }
tokio = "0.2.0-alpha.6"

#
# Libra core dependencies
#

[dependencies.libra-config]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.libra-crypto]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.libra-failure-ext]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.libra-mempool]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.libra-state-view]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.libra-types]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

# Non-`libra` prefixed Libra core dependencies

[dependencies.consensus]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.executor]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.grpc-helpers]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.network]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.state-synchronizer]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.storage-client]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.vm-runtime]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"

[dependencies.vm-validator]
git = "https://github.com/iqlusioninc/libra.git"
branch = "synchro"
